tests/samples/negative/types/slice_return_local.ax
module slice_return_local;

fn bad() -> []const u8 {
    let bytes: [2]u8 = b"ok";
    return bytes[:];
}

fn main() -> i32 {
    return 0;
}
